tests/NormalTests/paczka1/fuzzy1/94090082.err
Error in line 11: A641 S38 21,2
Error in line 8: Op1zz17 S38 6,0
Error in line 13: A641 A334 10,5
Error in line 24: A641 S38 93,0
Error in line 32: pfwbZIt8spH S668 9,3
